--- a/package.json
+++ b/package.json
@@ -26,5 +26,5 @@
   "bugs": {
     "url": "https://github.com/shurjopay-plugins/sp-plugin-js/issues"
   },
-  "homepage": "https://github.com/shurjopay-plugins/sp-plugin-js#readme"
+  "homepage": "https://github.com/shurjopay-plugins"
 }
