--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shurjopay-js",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Official shurjoPay JavaScript package (plugin) for merchants or service providers to connect with shurjoPay Payment Gateway v2.1 developed and maintained by shurjoMukhi Limited.",
   "main": "shurjopay.js",
   "directories": {
@@ -16,10 +16,12 @@
   "keywords": [
     "shurjopay",
     "shurjomukhi",
-    "sp",
+    "shurjopay-plugin",
     "sp-plugin",
-    "sp-plugin-js",
-    "sp-plugin-JavaScript"
+    "javascript",
+    "react",
+    "angular",
+    "vue.js"
   ],
   "author": "Saiful Islam Shanto",
   "license": "MIT",
